public/assets/stylesheets/GameBackground.css
body {
  background-color: #122D34;
  margin: 0;
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none; }

#game {
  cursor: pointer; }

.title-column {
  max-width: 700px;
  min-width: 320px;
  display: block;
  margin: 3% auto 0 auto; }
  .title-column img {
    max-width: 100%;
    height: auto;
    display: block;
    margin: auto; }

.center-column {
  max-width: 500px;
  min-width: 320px;
  display: block;
  margin-left: auto;
  margin-right: auto; }
  .center-column.running-sum {
    min-height: 30px;
    color: #EFE8BE;
    text-align: center;
    font-family: VCROSD;
    font-size: 30px; }
  .center-column .how-to-play {
    margin: 10px auto 10px auto;
    width: 95%;
    color: #729199;
    font-size: 24px;
    font-family: monospace; }

@font-face {
  font-family: VCROSD;
  src: url(../fonts/VCR_OSD_MONO_1.001.ttf); }
#goals {
  width: 80%;
  margin: 0 auto;
  display: table;
  width: 100%;
  table-layout: fixed;
  margin-bottom: 20px; }
  #goals .goal-span {
    display: table-cell;
    text-align: center;
    color: #EFE8BE;
    font-family: VCROSD;
    font-size: 80px;
    margin: 0 10px 10px 10px; }

.game-button-wrapper {
  cursor: pointer;
  text-align: center;
  margin: 10px 0px 20px 0px; }
  .game-button-wrapper .game-btn {
    height: auto;
    display: inline-block;
    width: 40%;
    margin: 0px 10px;
    background-color: Transparent;
    border-style: solid;
    border-color: #a7acb0;
    border-radius: 10px; }
    .game-button-wrapper .game-btn:active {
      background-color: #EFE8BE; }
    .game-button-wrapper .game-btn img {
      height: 40px;
      width: 100%; }

/*# sourceMappingURL=GameBackground.css.map */

